fixing itemize color

--- a/colorful-dream/beamerthemecolorful-dream.sty
+++ b/colorful-dream/beamerthemecolorful-dream.sty
@@ -110,6 +110,10 @@
 
 \setbeamercolor{description item}{fg=btcd@color@black}
 
+\setbeamercolor{itemize item}{fg=btcd@color@black}
+\setbeamercolor{itemize subitem}{fg=btcd@color@black}
+\setbeamercolor{itemize subsubitem}{fg=btcd@color@black}
+
 \setbeamercolor{enumerate item}{fg=btcd@color@black}
 \setbeamercolor{enumerate subitem}{fg=btcd@color@black}
 \setbeamercolor{enumerate subsubitem}{fg=btcd@color@black}
