--- a/colorful-dream/beamerthemecolorful-dream.sty
+++ b/colorful-dream/beamerthemecolorful-dream.sty
@@ -151,6 +151,12 @@
 \setbeamercolor{block title}{use=structure,fg=btcd@color@white,bg=btcd@solidF}
 \setbeamercolor{block body}{parent=normal text,use=block title,bg=block title.bg!10!bg}
 
+% pad itemize bullets
+\newdimen\btcd@leftmargini
+\settowidth\btcd@leftmargini{\usebeamertemplate{itemize item}}
+\addtolength\btcd@leftmargini\labelsep
+\preto\itemize{\leftmargini=\btcd@leftmargini}
+
 \defbeamertemplate*{block example begin}{cdream}
 {
   \par\vskip\medskipamount%
