--- a/colorful-dream/beamerthemecolorful-dream.sty
+++ b/colorful-dream/beamerthemecolorful-dream.sty
@@ -36,8 +36,8 @@
 \definecolor{btcd@color@alerted}{RGB}{#3}%
 }
 
-% RGB(51,68,95) RGB(80,113,143) RGB(132,69,75)
-\SetColorProfile{51,68,95}{80,113,143}{132,69,75}
+% RGB(63, 43, 44) RGB(237,39,66) RGB(173, 163, 136)
+\SetColorProfile{63,43,44}{237,39,66}{173, 163, 136}
 
 \definecolor{btcd@color@white}{RGB}{254,254,254} % RGB(254,254,254)
 \definecolor{btcd@color@black}{RGB}{009,009,009} % RGB(009,009,009)
